builded a streamlit app

--- a/src/vectorization.ipynb
+++ b/src/vectorization.ipynb
@@ -2,22 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "e17448d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../data/label_encoder.pkl']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "import pandas as pd\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import LabelEncoder,OneHotEncoder\n",
+    "from scipy.sparse import hstack\n",
+    "import joblib\n",
     "\n",
     "df = pd.read_csv('../data/cleaned_tweets.csv')\n",
     "tfidf = TfidfVectorizer(stop_words='english', max_df=0.9)\n",
     "df['cleaned_text'] = df['cleaned_text'].fillna('')\n",
-    "X = tfidf.fit_transform(df['cleaned_text'])\n",
+    "x_text = tfidf.fit_transform(df['cleaned_text'])\n",
+    "\n",
+    "ohe = OneHotEncoder(sparse_output=True)\n",
+    "x_airline = ohe.fit_transform(df[['airline']])\n",
+    "\n",
+    "\n",
+    "X = hstack((x_text,x_airline))\n",
+    "\n",
     "y = df['airline_sentiment']\n",
     "le = LabelEncoder()\n",
-    "y = le.fit_transform(y)\n"
+    "y = le.fit_transform(y)\n",
+    "\n",
+    "joblib.dump(X,'../data/x.pkl')\n",
+    "joblib.dump(y,'../data/y.pkl')\n",
+    "joblib.dump(tfidf, '../data/tfidf_vectorizer.pkl')\n",
+    "joblib.dump(ohe, '../data/airline_encoder.pkl')\n",
+    "joblib.dump(le, '../data/label_encoder.pkl')\n"
    ]
   }
  ],
